--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-Library/PackageCache/com.unity.burst/**/*.dylib filter=lfs diff=lfs merge=lfs -text
+Library/PackageCache/**/*.dylib filter=lfs diff=lfs merge=lfs -text
