--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-Library/PackageCache/**/*.dylib filter=lfs diff=lfs merge=lfs -text
+# burst@ANY-VERSION folder
+Library/PackageCache/com.unity.burst@*/*.dylib filter=lfs diff=lfs merge=lfs -text
