--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-# burst@ANY-VERSION folder
-Library/PackageCache/com.unity.burst@*/*.dylib filter=lfs diff=lfs merge=lfs -text
+# track every .dylib in PackageCache (including versioned folders & subfolders)
+Library/PackageCache/**/*.dylib filter=lfs diff=lfs merge=lfs -text
