--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-# track every .dylib in PackageCache (including versioned folders & subfolders)
-Library/PackageCache/**/*.dylib filter=lfs diff=lfs merge=lfs -text
+Library/PackageCache/com.unity.burst@1.8.15/.Runtime/*.dylib filter=lfs diff=lfs merge=lfs -text
