--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-Library/PackageCache/com.unity.burst@*/*.dylib filter=lfs diff=lfs merge=lfs -text
+It's Up 2 Us/Library/PackageCache/com.unity.burst@*/*.dylib filter=lfs diff=lfs merge=lfs -text
